@@ -1,1 +1,1 @@
-char *version_string = "egcs-2.91.55 19980824 (gcc2 ss-980609 experimental)";
+char *version_string = "egcs-2.91.57 19980901 (egcs-1.1 release)";
