@@ -1,3 +1,7 @@
+1998-08-23  Dave Love  <d.love@dl.ac.uk>
+
+	* g77.texi: Increment `version-g77' and fix a few typos.
+
 Tue Aug 11 08:12:14 1998  H.J. Lu  (hjl@gnu.org)
 
 	* Make-lang.in (g77.o): Touch lang-f77 before checking it.
